--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,37 +215,118 @@
        "      <td>23000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77531</th>\n",
+       "      <td>19100.0</td>\n",
+       "      <td>11.261</td>\n",
+       "      <td>86600</td>\n",
+       "      <td>0.653580</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77532</th>\n",
+       "      <td>17700.0</td>\n",
+       "      <td>10.662</td>\n",
+       "      <td>80900</td>\n",
+       "      <td>0.629172</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50900</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77533</th>\n",
+       "      <td>17600.0</td>\n",
+       "      <td>10.595</td>\n",
+       "      <td>80300</td>\n",
+       "      <td>0.626401</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77534</th>\n",
+       "      <td>16300.0</td>\n",
+       "      <td>10.068</td>\n",
+       "      <td>75300</td>\n",
+       "      <td>0.601594</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77535</th>\n",
+       "      <td>15600.0</td>\n",
+       "      <td>9.742</td>\n",
+       "      <td>72300</td>\n",
+       "      <td>0.585062</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42300</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>77536 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
-       "0    10700.0          7.672            52800        0.431818                5   \n",
-       "1     8400.0          6.692            43600        0.311927                3   \n",
-       "2     9000.0          6.963            46100        0.349241                3   \n",
-       "3    10700.0          7.664            52700        0.430740                5   \n",
-       "4    10800.0          7.698            53000        0.433962                5   \n",
+       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+       "0        10700.0          7.672            52800        0.431818   \n",
+       "1         8400.0          6.692            43600        0.311927   \n",
+       "2         9000.0          6.963            46100        0.349241   \n",
+       "3        10700.0          7.664            52700        0.430740   \n",
+       "4        10800.0          7.698            53000        0.433962   \n",
+       "...          ...            ...              ...             ...   \n",
+       "77531    19100.0         11.261            86600        0.653580   \n",
+       "77532    17700.0         10.662            80900        0.629172   \n",
+       "77533    17600.0         10.595            80300        0.626401   \n",
+       "77534    16300.0         10.068            75300        0.601594   \n",
+       "77535    15600.0          9.742            72300        0.585062   \n",
        "\n",
-       "   derogatory_marks  total_debt  loan_status  \n",
-       "0                 1       22800            0  \n",
-       "1                 0       13600            0  \n",
-       "2                 0       16100            0  \n",
-       "3                 1       22700            0  \n",
-       "4                 1       23000            0  "
+       "       num_of_accounts  derogatory_marks  total_debt  loan_status  \n",
+       "0                    5                 1       22800            0  \n",
+       "1                    3                 0       13600            0  \n",
+       "2                    3                 0       16100            0  \n",
+       "3                    5                 1       22700            0  \n",
+       "4                    5                 1       23000            0  \n",
+       "...                ...               ...         ...          ...  \n",
+       "77531               12                 2       56600            1  \n",
+       "77532               11                 2       50900            1  \n",
+       "77533               11                 2       50300            1  \n",
+       "77534               10                 2       45300            1  \n",
+       "77535                9                 2       42300            1  \n",
+       "\n",
+       "[77536 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# YOUR CODE HERE!\n",
+    "df = pd.read_csv(Path(\"Resources/lending_data.csv\"))\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "df"
    ]
   },
   {
@@ -257,22 +338,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "y = df['loan_status']\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "X = df.drop(columns='loan_status')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,19 +367,19 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "y[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +483,14 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "X.head()"
    ]
   },
   {
@@ -421,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -432,14 +513,14 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "# YOUR CODE HERE!"
+    "y.value_counts()"
    ]
   },
   {
@@ -451,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +541,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
    ]
   },
   {
@@ -486,16 +567,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=1)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,10 +590,10 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model_lr = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "model_lr.fit(X_train, y_train)"
    ]
   },
   {
@@ -521,12 +605,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred_lr = model_lr.predict(X_test)"
    ]
   },
   {
@@ -544,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -553,41 +637,41 @@
        "0.9520479254722232"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_pred_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[18663,   102],\n",
-       "       [   56,   563]])"
+       "       [   56,   563]], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_pred_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +690,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_pred_lr))"
    ]
   },
   {
@@ -622,7 +706,9 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:**\n",
+    "\n",
+    "It did really good on 0 category, and okay performance for 1."
    ]
   },
   {
@@ -648,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,33 +743,33 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "ros = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_ros, y_ros = ros.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_ros.value_counts()"
    ]
   },
   {
@@ -695,19 +781,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model_lr_ros = LogisticRegression()\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "model_lr_ros.fit(X_ros, y_ros)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred_ros = model_lr_ros.predict(X_test)"
    ]
   },
   {
@@ -725,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -734,41 +820,41 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_pred_ros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[18649,   116],\n",
-       "       [    4,   615]])"
+       "       [    4,   615]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_pred_ros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +873,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_pred_ros))"
    ]
   },
   {
@@ -803,8 +889,17 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:**\n",
+    "\n",
+    "Category 0 was already great with the original data, but the F1 score of the category 1 improved.\n",
+    "\n",
+    "Especially the recall percent for category 1 improved dramatically with oversampled data."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
